@@ -1,7 +1,5 @@
 Javafx music player that has almost the basic features of a music player
-Written by [Amir Ali Azimi](https://github.com/AmirAli-AZ)
-
-[![Chat](https://img.shields.io/badge/chat-on%20discord-7289da)](https://discord.gg/UdSrdWeSQP)
+Written by [Amir Ali Azimi](https://github.com/AmirAli-AZ)  [![Chat](https://img.shields.io/badge/chat-on%20discord-7289da)](https://discord.gg/UdSrdWeSQP)
 
 Features :
 - music volume
@@ -13,6 +11,16 @@ Features :
 - music downloader
 - system dark mode
 - mini player
+
+
+## How to run in linux?
+
+You must first install java and javafx SDK (version 17 is recommended) 
+download and unzip javafx SDK from : https://gluonhq.com/products/javafx/
+
+then you have to run this command in your terminal 
+
+`java -jar --module-path [path to javafx lib] --add-modules=javafx.controls,javafx.fxml,javafx.web,javafx.media Dream_Music.jar`
 
 ## ScreenShots
 
